src/test/deca/context/invalid/float_from_bool.deca
// Description :
// Affectation d'un flottant a un booleen

// Resultats :
// Erreur contextuelle


{
  boolean b;
  b = 1.5;
}
